# rails-portfolio-dhealy

./: .gitignore  .yarnrc.yml  Gemfile  Procfile.dev  README.md  package-lock.json  package.json  ruby
libopentok_linux_llvm_x86_64/: CMakeLists.txt
libopentok_linux_llvm_x86_64/docs/linux/: NOTICE  README.md  csdk-doxygen.conf  release-notes.md
libopentok_linux_llvm_x86_64/docs/linux/reference/html/: annotated.html  audio__data_8h.html  audio__data_8h_source.html  audio__device_8h.html  audio__device_8h_source.html  audio__module__input__device_8h.html  audio__module__input__device_8h_source.html  audio__module__output__device_8h.html  audio__module__output__device_8h_source.html  base_8h.html  base_8h_source.html  camera__capture__resolution_8h.html  camera__capture__resolution_8h_source.html  classes.html  connection_8h.html  connection_8h_source.html  dir_5bf4e1e7754f85924dbbd8ed2fd823c8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_93ffdfbd8e3a9a67091da64e2fa73a89.html  dir_ea75cd660b3020692252ae823ed5c04e.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  media__utils_8h.html  media__utils_8h_source.html  menudata.js  publisher_8h.html  publisher_8h_source.html  session_8h.html  session_8h_source.html  stream_8h.html  stream_8h_source.html  structotc__audio__data.html  (+26 more)
libopentok_linux_llvm_x86_64/include/opentok/: audio_device.h  base.h  camera_capture_resolution.h  config.h  publisher.h  session.h  stream.h  subscriber.h
(+123 files in other folders)
